--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
 
 
 
-.navigationBar{
-    background-color: aquamarine;
-    color: rgb(138, 128, 128);
-    margin-top: 0%;
+header{
+    background-color: rgb(102, 128, 243);
+    color: rgb(71, 69, 69);
+    margin-top: 0;
+    text-align: center;
 }
 
 h1 {
@@ -15,16 +16,42 @@ h1 {
 #navigation{
     list-style-type: none;
     display: flex;
-    justify-content: end;
+    flex-direction: row;
     justify-content: space-evenly;
     font-size: 35px;
 
 }
-nav li:hover{
+li:hover{
     cursor: pointer;
     font-style: underline;
-    text-decoration: underline;
-    
+    text-decoration: underline;    
 
 }
+.subtitle{
+    flex: 400px ;
+    width: 100%;
+    background-image: url(https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-deve-picture-id537331500?k=20&m=537331500&s=612x612&w=0&h=vnE5e_eExMtetDyYBTBoORFkxiK02o9H6KfgFwvKt4c=);
+    
+    font-size: 45px;
+    color: rgb(255, 239, 239);
+    text-align: right;
+}
+
+main{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+}
+section{
+    flex: 200px;
+    background-color: purple;
+    padding: 40px;
+}
+
+#subsection{
+ display: 
+
+}
+
 
