--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 
-
+body{
+    background-color: lightsteelblue;
+}
 
 
 header{
@@ -29,11 +31,11 @@ li:hover{
 }
 .subtitle{
     flex: 400px ;
+    height: 80px;
     width: 100%;
     background-image: url(https://media.istockphoto.com/photos/programming-code-abstract-technology-background-of-software-deve-picture-id537331500?k=20&m=537331500&s=612x612&w=0&h=vnE5e_eExMtetDyYBTBoORFkxiK02o9H6KfgFwvKt4c=);
-    
     font-size: 45px;
-    color: rgb(255, 239, 239);
+    color: rgb(14, 184, 57);
     text-align: right;
 }
 
@@ -45,8 +47,9 @@ main{
 }
 section{
     flex: 200px;
-    background-color: purple;
+    background-color: rgb(125, 127, 240);
     padding: 40px;
+    font-size: 24px;
 }
 
 #subsection{
